<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mask_body"
    android:orientation="vertical" >

    <TextView
        style="@style/NewsPaperTitleText"
        android:layout_marginLeft="10dip"
        android:text="站内功能" />

    <RelativeLayout
        android:id="@+id/center_mail"
        style="@style/RoundListBody"
        android:layout_marginLeft="10dip"
        android:background="@drawable/roundlist_top" >

        <TextView
            style="@style/NewsPaperContentText"
            android:text="@string/mail" />

        <TextView
            style="@style/NewsPaperRightItem"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_blog"
        style="@style/RoundListBody"
        android:layout_marginLeft="10dip"
        android:background="@drawable/roundlist_center" >

        <TextView
            style="@style/NewsPaperContentText"
            android:text="@string/blog" />

        <TextView
            style="@style/NewsPaperRightItem"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_search"
        style="@style/RoundListBody"
        android:layout_marginLeft="10dip"
        android:background="@drawable/roundlist_bottom" >

        <TextView
            style="@style/NewsPaperContentText"
            android:text="@string/search_article" />

        <TextView
            style="@style/NewsPaperRightItem"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <TextView
        style="@style/NewsPaperTitleText"
        android:layout_marginLeft="10dip"
        android:text="本地功能" />

    <RelativeLayout
        android:id="@+id/center_friends"
        style="@style/RoundListBody"
        android:layout_marginLeft="10dip"
        android:background="@drawable/roundlist_top" >

        <TextView
            style="@style/NewsPaperContentText"
            android:text="@string/friends" />

        <TextView
            style="@style/NewsPaperRightItem"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_collection"
        style="@style/RoundListBody"
        android:layout_marginLeft="10dip"
        android:background="@drawable/roundlist_bottom" >

        <TextView
            style="@style/NewsPaperContentText"
            android:text="@string/collection" />

        <TextView
            style="@style/NewsPaperRightItem"
            android:background="@drawable/arrow" />
    </RelativeLayout>

</LinearLayout>