<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <ImageButton
            android:id="@+id/all_board"
            style="@style/ImageButton"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/all_board"
            android:minWidth="75dip"
            android:src="@drawable/all_board" />

        <TextView
            android:id="@+id/board_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pre_board"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/board_edit"
            style="@style/TitleRightImageButton"
            android:contentDescription="@string/delete_pic"
            android:src="@drawable/new_element" />
    </RelativeLayout>

    <com.jerry.widget.XListView
        android:id="@android:id/list"
        style="@style/listview" />

</LinearLayout>