<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/welcome"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.6" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/title_background" >

            <Button
                android:id="@+id/login_exit"
                style="@style/TitleLeftBackButton"
                android:text="@string/quit" />

            <Button
                android:id="@+id/login_submit"
                style="@style/TitleRightTextButton"
                android:text="@string/login" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.4" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:background="@drawable/edit_text_background"
            android:orientation="vertical"
            android:padding="15dip" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_hint"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>