<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mask_body"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <ImageButton
            android:id="@+id/about_back"
            style="@style/TitleLeftBackButton"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/about_back"
            android:text="@string/about"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/about_email"
            android:layout_centerHorizontal="true"
            android:text="@string/myinfo"
            android:textColor="#a5a7a5" />

        <TextView
            android:id="@+id/about_email"
            style="@style/SubContentText"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="5dip"
            android:text="@string/myemail" />
    </RelativeLayout>

</LinearLayout>