<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <ImageButton
            android:id="@+id/mail_quit"
            style="@style/TitleLeftBackButton"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/mail_quit"
            android:text="@string/mail"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/mail_add"
            style="@style/TitleRightImageButton"
            android:contentDescription="@string/add"
            android:src="@drawable/new_element" />
    </RelativeLayout>

    <com.jerry.widget.XListView
        android:id="@android:id/list"
        style="@style/listview" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:padding="5dip"
        android:background="@drawable/list_head_background" >

        <Button
            android:id="@+id/mail_load_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_button"
            android:text="载入更多" />
    </LinearLayout>

</LinearLayout>