<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/body_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/set_backButton"
            style="@style/TitleLeftBackButton"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dip" >

            <TextView
                style="@style/NewsPaperTitleText"
                android:text="偏好设置" />

            <RelativeLayout
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_top"
                android:paddingTop="5dip" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/load_pic" />

                <com.jerry.widget.Switcher
                    android:id="@+id/set_showPic"
                    style="@style/NewsPaperRightItem" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_center" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="夜间模式" />

                <com.jerry.widget.Switcher
                    android:id="@+id/set_night"
                    style="@style/NewsPaperRightItem" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/RoundListBody"
                android:paddingBottom="8dip"
                android:background="@drawable/roundlist_bottom" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="字体大小" />

                <RadioGroup
                    style="@style/NewsPaperRightItem"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/set_font_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/font1_background"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/set_font_middle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/font2_background"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/set_font_big"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/font3_background"
                        android:button="@null" />
                </RadioGroup>
            </RelativeLayout>

            <TextView
                style="@style/NewsPaperTitleText"
                android:text="账户设置" />

            <RelativeLayout
                android:id="@+id/set_acc"
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_top" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/switch_user" />

                <TextView
                    style="@style/NewsPaperRightItem"
                    android:background="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_center" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/login_when_start" />

                <com.jerry.widget.Switcher
                    android:id="@+id/set_autoLogin"
                    style="@style/NewsPaperRightItem" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_center" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/reply_send_mail" />

                <com.jerry.widget.Switcher
                    android:id="@+id/set_reply_mail"
                    style="@style/NewsPaperRightItem" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_sign"
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_center" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/sign" />

                <TextView
                    style="@style/NewsPaperRightItem"
                    android:background="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_block"
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_bottom" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/manage_black" />

                <TextView
                    style="@style/NewsPaperRightItem"
                    android:background="@drawable/arrow" />
            </RelativeLayout>

            <TextView
                style="@style/NewsPaperTitleText"
                android:text="关于软件" />

            <RelativeLayout
                android:id="@+id/set_about"
                style="@style/RoundListBody"
                android:background="@drawable/roundlist_top" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="@string/about" />

                <TextView
                    style="@style/NewsPaperRightItem"
                    android:background="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_send2me"
                style="@style/RoundListBody"
                android:layout_marginBottom="10dip"
                android:background="@drawable/roundlist_bottom" >

                <TextView
                    style="@style/NewsPaperContentText"
                    android:text="发送反馈" />

                <TextView
                    style="@style/NewsPaperRightItem"
                    android:background="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>