<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/body_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/sign_exit"
            style="@style/TitleLeftBackButton"
            android:text="@string/back" />

        <TextView
            android:id="@+id/sign_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sign_submit"
            style="@style/TitleRightTextButton"
            android:text="@string/save" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_ra1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip" >

        <ToggleButton
            android:id="@+id/sign_precustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/radio_button"
            android:textOff=""
            android:textOn="" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/sign_precustom"
            android:src="@drawable/sign" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_ra2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip" >

        <ToggleButton
            android:id="@+id/sign_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/radio_button"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/sign_custom"
            android:text="自定义"
            android:textColor="#8a8b91"
            android:textSize="17dip" />
    </RelativeLayout>

    <EditText
        android:id="@+id/sign_sign"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/edit_text"
        android:gravity="top"
        android:hint="@string/sign_hint"
        android:inputType="textMultiLine"
        android:padding="5dip" />

</LinearLayout>