<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/reply_quit"
            style="@style/TitleLeftBackButton"
            android:text="@string/back" />

        <TextView
            android:id="@+id/sb_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reply_submit"
            style="@style/TitleRightTextButton"
            android:text="@string/send" />
    </RelativeLayout>

    <EditText
        android:id="@+id/reply_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_title"
        android:ems="10"
        android:hint="@string/title_hint"
        android:textColorHint="#A9F5A9" />

    <EditText
        android:id="@+id/reply_edit"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="10dip"
        android:textColor="@android:color/background_dark" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_toolbar_background"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/reply_input"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/about"
            android:src="@drawable/input" />

        <ImageButton
            android:id="@+id/reply_expression"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/about"
            android:src="@drawable/expression" />

        <ImageButton
            android:id="@+id/reply_photo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/about"
            android:src="@drawable/camera" />

        <ImageButton
            android:id="@+id/reply_pic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/about"
            android:src="@drawable/picture" />
    </TableRow>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:horizontalSpacing="4dip"
        android:numColumns="9"
        android:padding="5dip"
        android:stretchMode="columnWidth"
        android:verticalSpacing="4dip"
        android:visibility="gone" />

</LinearLayout>